[package]
name = "trans2quik"
version = "2.0.0"
authors = [
    "Denis Stepanov <stepanov.d.m@yandex.ru>",
    "hexqnt <hexqntlab@gmail.com>",
]
edition = "2024"
description = "Library for importing transactions, entering orders into the QUIK ARQA Technologies trading system via the API."
readme = "README.md"
repository = "https://github.com/stepanov-denis/trans2quik"
license = "MIT OR Apache-2.0"
keywords = ["moex", "quik", "trans2quik", "trading"]
categories = ["finance"]

[dependencies]
libloading = "0.9.0"
libc = "0.2.183"
tracing = "0.1.44"
encoding_rs = "0.8.35"
tokio = { version = "1.50.0", features = ["sync"] }
chrono = { version = "0.4.44", features = ["serde"] }
